--- a/frontend/auth.html
+++ b/frontend/auth.html
@@ -23,6 +23,12 @@
                 </div>
             </div>
             <div class="auth-form">
+                <div style="display:flex;justify-content:flex-end;margin-bottom:0.75rem;">
+                    <button class="theme-toggle" id="theme-toggle-auth">
+                        <i class="fas fa-moon"></i>
+                        <span>Dark</span>
+                    </button>
+                </div>
                 <div id="auth-alert"></div>
                 <div class="tab-buttons" style="margin-bottom:1.5rem;">
                     <button class="tab-button active" data-form="login-form">Sign In</button>
