--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,10 @@
                 <span>Green Track</span>
             </div>
             <div class="nav-links">
+                <button class="theme-toggle" id="theme-toggle">
+                    <i class="fas fa-moon"></i>
+                    <span>Dark</span>
+                </button>
                 <a href="#how-it-works">How It Works</a>
                 <a href="#stats">Impact</a>
                 <button class="btn btn-primary" onclick="window.location.href='auth.html'">Get Started</button>
@@ -221,7 +225,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Green Track. Making communities cleaner, together.</p>
+            <p>&copy; 2025 Green Track. Making communities cleaner, together.</p>
         </div>
     </footer>
 
