--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -15,6 +15,10 @@
                 <span>Green Track Dashboard</span>
             </div>
             <div class="nav-links">
+                <button class="theme-toggle" id="theme-toggle-dashboard">
+                    <i class="fas fa-moon"></i>
+                    <span>Dark</span>
+                </button>
                 <span id="user-info" style="font-weight:600;"></span>
                 <button class="btn btn-outline" id="logout-btn">Logout</button>
             </div>
