--- a/frontend/auth.html
+++ b/frontend/auth.html
@@ -71,6 +71,7 @@
             </div>
         </div>
     </div>
+    <script src="js/main.js"></script>
     <script src="js/auth.js"></script>
 </body>
 </html>
