--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -94,12 +94,19 @@
                         <button type="submit" class="btn btn-primary" style="width: 100%;">Submit Report</button>
                     </form>
                 </div>
-                    <div class="card">
+                <div class="card">
                     <div class="dashboard-card-title">
                         <h3>My Reports</h3>
                         <p style="color: var(--muted);">Track statuses and updates.</p>
                     </div>
                     <div id="my-reports"></div>
+                </div>
+                <div class="card">
+                    <div class="dashboard-card-title">
+                        <h3>Rewards &amp; Coupons</h3>
+                        <p style="color: var(--muted);">Earn discount codes from brands like Swiggy, Zomato, Blinkit, Ola, Uber, KFC and Domino's when your photo reports are verified.</p>
+                    </div>
+                    <div id="citizen-rewards"></div>
                 </div>
             </div>
         </section>
